--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 //palette: https://colorhunt.co/palette/161a3031304db6bbc4f0ece5
 
 $primary: #31304D;
-
+$secondary: #161A30;
 $body-bg: #161A30;
 
 @import "~bootstrap/scss/bootstrap.scss";
