--- a/src/components/movie-view/movie-view.scss
+++ b/src/components/movie-view/movie-view.scss
@@ -4,4 +4,14 @@ h1 {
 
 .back-button {
     margin-left: 8px;
+
+    @media (max-width: 1199px) { 
+        margin-top: 10px;
+        margin-left: 0;
+    }
+
+    @media (min-width: 1200px) and (max-width: 1399px) { 
+        margin-top: 0;
+        margin-left: 3px;
+    }
 }
